// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AccountList with accounts 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <CategoryListItem
      description="dog costs"
      id="1"
      key="1"
      location="editAccount"
      value="BoA"
    />
    <CategoryListItem
      description=""
      id="2"
      key="2"
      location="editAccount"
      value="Citi Bank"
    />
    <CategoryListItem
      description="credit card"
      id="3"
      key="3"
      location="editAccount"
      value="Chase Bank"
    />
  </div>
</div>
`;

exports[`should render AccountList with no accounts 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No accounts to show
      </span>
    </div>
  </div>
</div>
`;
